fixed menu on iphone

--- a/css/nav.scss
+++ b/css/nav.scss
@@ -15,13 +15,24 @@
     z-index: 100;
     background-color: white;
     top: -53px;
+
+    @media (max-width: 375px) {
+      top: -10px;
+    }
   }
+
 }
 
 .navbar.shadow {
   box-shadow: 0 4px 3px -3px #dedede;
 }
 
+.navbar-brand > a.navbar-item {
+  @media (max-width: 375px) {
+    width: 80%;
+    top: 14px;
+  }
+}
 
 .navbar-img {
   position: relative;
@@ -29,8 +40,6 @@
   max-height: 5.5rem !important;
 
   @media (max-width: 375px) {
-    max-height: 3.5rem !important;
-    top: 4.5px;
   }
 
   @media (max-width: 768px) {
